--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
-
-* {
-  font-family: 'Inconsolata', monospace;
-}
-
-html, body {
+html,
+body {
   padding: 0;
   margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
 }
