--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
+  font-family: 'Zen Kurenaido', sans-serif;
 }
 
 a {
