--- a/styles/Learn.module.scss
+++ b/styles/Learn.module.scss
@@ -3,3 +3,19 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
 }
+
+
+@media screen and (max-width: 1200px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
