--- a/helen/components/Auth/Auth.module.scss
+++ b/helen/components/Auth/Auth.module.scss
@@ -40,6 +40,13 @@
   background-color: #333;
   padding: 0.5rem 1rem;
   color: white;
+  transition: 0.2s ease-in-out;
+  
+  &:hover {
+    border: 1px solid #333;
+    background-color: whitesmoke;
+    color: black;
+  }
 }
 
 @media screen and (max-width: 1300px) {
