--- a/helen/styles/globals.scss
+++ b/helen/styles/globals.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Zen Kurenaido', sans-serif;
+  font-family: 'Zen Kaku Gothic New', sans-serif;
 }
 
 a {
