--- a/helen/styles/globals.scss
+++ b/helen/styles/globals.scss
@@ -15,3 +15,12 @@ a {
 * {
   box-sizing: border-box;
 }
+
+input, select, option, button {
+  font-family: inherit;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+-webkit-appearance: none;
+}
