--- a/helen/styles/globals.scss
+++ b/helen/styles/globals.scss
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Zen Kaku Gothic New', sans-serif;
+  font-family: 'Roboto Mono', monospace;
+  margin-bottom: 5rem;
 }
 
 a {
@@ -16,11 +17,26 @@ a {
   box-sizing: border-box;
 }
 
-input, select, option, button {
+input,
+select,
+option,
+button {
   font-family: inherit;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
--webkit-appearance: none;
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
+body::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: crimson;
 }
