--- a/helen/styles/globals.scss
+++ b/helen/styles/globals.scss
@@ -5,7 +5,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Roboto Mono', monospace;
-  margin-bottom: 5rem;
 }
 
 a {
@@ -39,4 +38,10 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background-color: crimson;
+}
+
+@media screen and (max-width: 800px) {
+  body {
+    margin-bottom: 5rem;
+  }
 }
