--- a/helen/components/Navbar/Navbar.module.scss
+++ b/helen/components/Navbar/Navbar.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
 }
 
-.links > a {
+.links > button {
   margin: 0 1rem;
 }
 
@@ -23,7 +23,7 @@
   .logo {
     font-size: medium;
   }
-  .links > a {
+  .links > button {
     margin: 0rem;
   }
 }
