--- a/helen/components/Auth/Auth.module.scss
+++ b/helen/components/Auth/Auth.module.scss
@@ -2,7 +2,10 @@
   h2 {
     text-align: center;
   }
-  p, .inputBox, .selectBox,.submitBtn {
+  p,
+  .inputBox,
+  .selectBox,
+  .submitBtn {
     font-size: 1.3rem;
   }
 }
@@ -41,7 +44,7 @@
   padding: 0.5rem 1rem;
   color: white;
   transition: 0.2s ease-in-out;
-  
+
   &:hover {
     border: 1px solid #333;
     background-color: whitesmoke;
@@ -54,7 +57,6 @@
     width: 90%;
   }
 }
-
 
 @media screen and (max-width: 800px) {
   .innerForm {
