--- a/helen/components/UI/Card/Card.module.scss
+++ b/helen/components/UI/Card/Card.module.scss
@@ -9,7 +9,7 @@
 }
 
 .card:hover {
-  box-shadow: 0px 0px 17px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.3);
   transform: scale(1.02);
 }
 
